--- a/data/dataset.yaml
+++ b/data/dataset.yaml
@@ -1,11 +1,10 @@
 # Please insure that your custom_dataset are put in same parent dir with YOLOv6_DIR
-train: ../custom_dataset/images/train # train images
-val: ../custom_dataset/images/val # val images
-test: ../custom_dataset/images/test # test images (optional)
+train: data\dental_dataset\images\train # train images
+val: data\dental_dataset\images\val # val images
+test: data\dental_dataset\images\test # test images (optional)
 
 # whether it is coco dataset, only coco dataset should be set to True.
 is_coco: False
 # Classes
-nc: 20  # number of classes
-names: ['aeroplane', 'bicycle', 'bird', 'boat', 'bottle', 'bus', 'car', 'cat', 'chair', 'cow', 'diningtable', 'dog',
-        'horse', 'motorbike', 'person', 'pottedplant', 'sheep', 'sofa', 'train', 'tvmonitor']  # class names
+nc: 5 # number of classes
+names: ["healthy", "Stage 2 (Inner Enamel)", "Stage 3 (Outer Dentin)", "Stage 4 (Middle Dentin)", "Stage 5 (Inner Dentin)"] # class names
