--- a/data/dataset.yaml
+++ b/data/dataset.yaml
@@ -1,10 +1,10 @@
 # Please insure that your custom_dataset are put in same parent dir with YOLOv6_DIR
-train: data\dental_dataset\extended\images\train # train images
-val: data\dental_dataset\extended\images\val # val images
-test: data\dental_dataset\extended\images\test # test images (optional)
+train: data\\dental_dataset\\extended\\images\\train # train images
+val: data\\dental_dataset\\extended\\images\\val # val images
+test: data\\dental_dataset\\extended\\images\\test # test images (optional)
 
 # whether it is coco dataset, only coco dataset should be set to True.
 is_coco: False
 # Classes
 nc: 4 # number of classes
-names: ["Stage 2 (Inner Enamel)", "Stage 3 (Outer Dentin)", "Stage 4 (Middle Dentin)", "Stage 5 (Inner Dentin)"] # class names
+names: ["Caries", "Deep Caries", "Periapical Lesion", "Impacted tooth"] # class names
